--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -4,8 +4,8 @@ Flask==3.0.0
 Flask_Login==0.6.3
 girder_client==3.1.24
 imageio==2.33.1
-mysql_connector_repackaged==0.3.1
-numpy==1.26.3
+mysql-connector-python
+numpy
 opencv_python==4.9.0.80
 pandas==2.1.4
 plotly==5.18.0
@@ -14,3 +14,7 @@ python-dotenv==1.0.0
 python_bcrypt==0.3.2
 setuptools==69.0.3
 scikit-image==0.22.0
+pyarrow==14.0.2
+bcrypt==3.2.0
+scikit-build==0.17.6
+itk==5.3.0
