--- a/.github/workflows/pylint-actions.yml
+++ b/.github/workflows/pylint-actions.yml
@@ -20,6 +20,10 @@ jobs:
         python -m pip install --upgrade pip
         pip install pylint
 
+    - name: Run Pylint
+      run: |
+        pylint src --ignore=tests --max-line-length=120 --exit-zero
+
     - name: Check Pylint score
       run: |
         pylint_score=$(pylint src --ignore=tests --max-line-length=120 --exit-zero | grep -oP 'Your code has been rated at \K\d+\.\d+/10')
