--- a/.github/workflows/pylint-actions.yml
+++ b/.github/workflows/pylint-actions.yml
@@ -22,11 +22,11 @@ jobs:
 
     - name: Run Pylint
       run: |
-        pylint src --ignore=tests --max-line-length=120 --exit-zero
+        pylint src --ignore=tests --max-line-length=120 --exit-zero --disable=import-error
 
     - name: Check Pylint score
       run: |
-        pylint_score=$(pylint src --ignore=tests --max-line-length=120 --exit-zero | grep -oP 'Your code has been rated at \K\d+\.\d+/10')
+        pylint_score=$(pylint src --ignore=tests --max-line-length=120 --exit-zero --disable=import-error | grep -oP 'Your code has been rated at \K\d+\.\d+/10')
         if (( $(echo "$pylint_score >= 8" | bc -l) )); then
           echo "Pylint score is acceptable: $pylint_score"
         else
