--- a/.github/workflows/pylint-actions.yml
+++ b/.github/workflows/pylint-actions.yml
@@ -27,7 +27,8 @@ jobs:
     - name: Check Pylint score
       run: |
         pylint_score=$(pylint src --ignore=tests --max-line-length=120 --exit-zero --disable=import-error | grep -oP 'Your code has been rated at \K\d+\.\d+/10')
-        if (( $(echo "$pylint_score >= 8" | bc -l) )); then
+        pylint_score_numeric=$(echo "$pylint_score" | awk -F '/' '{print $1}')
+        if (( $(echo "$pylint_score_numeric >= 8" | bc -l) )); then
           echo "Pylint score is acceptable: $pylint_score"
         else
           echo "Pylint score is too low: $pylint_score"
