--- a/.github/workflows/pytest-actions.yml
+++ b/.github/workflows/pytest-actions.yml
@@ -19,7 +19,7 @@ jobs:
       DB_NAME: 'test'
 
       GIRDER_API_KEY: 'test'
-      GIRDER_API_URL: 'http://localhost:8080'
+      GIRDER_API_URL: 'test_url'
       GIRDER_RAW_FOLDER: 'test'
       GIRDER_PROCESSED_FOLDER: 'test'
 
