Replacing match by if for better comptability with python versions

--- a/.env-template
+++ b/.env-template
@@ -4,6 +4,7 @@ DEBUG = True
 DEV_TOOLS_PROPS_CHECK = True
 API_KEY = None
 SECRET_KEY = None
+CACHE_FOLDER = 'src/tmp/'
 
 DB_HOST = 'localhost'
 DB_USER = 'root'
