--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -2,6 +2,7 @@ dash==2.14.2
 dash_bootstrap_components==1.5.0
 Flask==3.0.0
 Flask_Login==0.6.3
+Flask-RESTful==0.3.10
 girder_client==3.1.24
 imageio==2.33.1
 mysql-connector-python
