--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -16,8 +16,9 @@ python_bcrypt==0.3.2
 setuptools==69.0.3
 scikit-image==0.22.0
 pyarrow==14.0.2
-bcrypt==3.2.0
 scikit-build==0.17.6
 itk>=5.1.0
 openpyxl>=3.1.2
 statsmodels==0.14.1
+python_bcrypt==0.3.2
+bcrypt==3.2.0
