--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -11,6 +11,7 @@ opencv_python==4.9.0.80
 pandas==2.1.4
 plotly==5.18.0
 pytest==7.4.4
+pytest-mock==3.14.0
 python-dotenv==1.0.0
 python_bcrypt==0.3.2
 setuptools==69.0.3
